tests/ui/nll/constant-thread-locals-issue-47053.stderr
error[E0594]: cannot assign to immutable static item `FOO`
  --> $DIR/constant-thread-locals-issue-47053.rs:9:5
   |
LL | static FOO: isize = 5;
   | ----------------- this `static` cannot be written to
...
LL |     FOO = 6;
   |     ^^^^^^^ cannot assign

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0594`.
